doc/examples/InvalidTests/OperationsInvalid.agl
t2 : Point = (1,3)+3; # Error! we cannot add a point with an integer
 
t3: Point = (1,3)+(3,4); # Error! we cannot add two points

t4: Point = 2/(1,3); # Error! we cannot divide an integer by a point

t7: Vector = (1:3)*(3:4); # Error! Multiplying two vectors results in a number

t8: Vector = (1:3)/(3:4); # Error! we cannot divide two vectors


